additional fix for bug#24062